# libvips

./: meson.build  meson_options.txt
libvips/conversion/: extract.c
libvips/convolution/: convf.c  convi.c  convi_neon.cpp  convi_sse.cpp  meson.build  pconvolution.h
libvips/foreign/: dzsave.c  exif.c  heifload.c  heifsave.c  jpeg2vips.c  pforeign.h  tiff2vips.c  webpsave.c
libvips/include/vips/: memory.h  meson.build  simd.h
libvips/iofuncs/: buffer.c  init.c  memory.c  meson.build  simd.c  threadpool.c  type.c  vips.c
libvips/resample/: meson.build  presample.h  reduceh.cpp  reduceh_neon.cpp  reduceh_sse.cpp  reducev.cpp  reducev_avx2.cpp  reducev_neon.cpp  reducev_sse.cpp  templates.h
libvips/simd/: simd.h  simd_neon.h  simd_sse.h
test/test-suite/: test_foreign.py
test/test-suite/helpers/: helpers.py
